toolchain/internal/core/analysis/testdata/errors/naming/type_not_pascal.vdl
// format:off
// @expect: E101

type User {
  id string
}
